HtmlEditor overflow icon fix, lots of extra background-image css rules for menu overflow but they were unavoidable.
git-svn-id: http://code.extjs.com/svn/ext/trunk@3553 c0a82769-a6a8-4f8a-96ba-7530dc2e272d

--- a/resources/css/structure/editor.css
+++ b/resources/css/structure/editor.css
@@ -6,60 +6,74 @@
     background:transparent no-repeat;
 }
 
-.x-html-editor-tb .x-edit-bold .x-btn-text {
+.x-html-editor-tb .x-edit-bold, .x-menu-item .x-edit-bold {
     background-position:0 0;
+    background-image:url(../images/default/editor/tb-sprite.gif);    
 }
 
-.x-html-editor-tb .x-edit-italic .x-btn-text {
+.x-html-editor-tb .x-edit-italic, .x-menu-item .x-edit-italic {
     background-position:-16px 0;
+    background-image:url(../images/default/editor/tb-sprite.gif);
 }
 
-.x-html-editor-tb .x-edit-underline .x-btn-text {
+.x-html-editor-tb .x-edit-underline, .x-menu-item .x-edit-underline {
     background-position:-32px 0;
+    background-image:url(../images/default/editor/tb-sprite.gif);
 }
 
-.x-html-editor-tb .x-edit-forecolor .x-btn-text {
+.x-html-editor-tb .x-edit-forecolor, .x-menu-item .x-edit-underline {
     background-position:-160px 0;
+    background-image:url(../images/default/editor/tb-sprite.gif);
 }
 
-.x-html-editor-tb .x-edit-backcolor .x-btn-text {
+.x-html-editor-tb .x-edit-backcolor, .x-menu-item .x-edit-backcolor {
     background-position:-176px 0;
+    background-image:url(../images/default/editor/tb-sprite.gif);
 }
 
-.x-html-editor-tb .x-edit-justifyleft .x-btn-text {
+.x-html-editor-tb .x-edit-justifyleft, .x-menu-item .x-edit-justifyleft {
     background-position:-112px 0;
+    background-image:url(../images/default/editor/tb-sprite.gif);
 }
 
-.x-html-editor-tb .x-edit-justifycenter .x-btn-text {
+.x-html-editor-tb .x-edit-justifycenter, .x-menu-item .x-edit-justifycenter {
     background-position:-128px 0;
+    background-image:url(../images/default/editor/tb-sprite.gif);
 }
 
-.x-html-editor-tb .x-edit-justifyright .x-btn-text {
+.x-html-editor-tb .x-edit-justifyright, .x-menu-item .x-edit-justifyright {
     background-position:-144px 0;
+    background-image:url(../images/default/editor/tb-sprite.gif);
 }
 
-.x-html-editor-tb .x-edit-insertorderedlist .x-btn-text {
+.x-html-editor-tb .x-edit-insertorderedlist, .x-menu-item .x-edit-insertorderedlist {
     background-position:-80px 0;
+    background-image:url(../images/default/editor/tb-sprite.gif);
 }
 
-.x-html-editor-tb .x-edit-insertunorderedlist .x-btn-text {
+.x-html-editor-tb .x-edit-insertunorderedlist, .x-menu-item .x-edit-insertunorderedlist {
     background-position:-96px 0;
+    background-image:url(../images/default/editor/tb-sprite.gif);
 }
 
-.x-html-editor-tb .x-edit-increasefontsize .x-btn-text {
+.x-html-editor-tb .x-edit-increasefontsize, .x-menu-item .x-edit-increasefontsize {
     background-position:-48px 0;
+    background-image:url(../images/default/editor/tb-sprite.gif);
 }
 
-.x-html-editor-tb .x-edit-decreasefontsize .x-btn-text {
+.x-html-editor-tb .x-edit-decreasefontsize, .x-menu-item .x-edit-decreasefontsize {
     background-position:-64px 0;
+    background-image:url(../images/default/editor/tb-sprite.gif);
 }
 
-.x-html-editor-tb .x-edit-sourceedit .x-btn-text {
+.x-html-editor-tb .x-edit-sourceedit, .x-menu-item .x-edit-sourceedit {
     background-position:-192px 0;
+    background-image:url(../images/default/editor/tb-sprite.gif);
 }
 
-.x-html-editor-tb .x-edit-createlink .x-btn-text {
+.x-html-editor-tb .x-edit-createlink, .x-menu-item .x-edit-createlink {
     background-position:-208px 0;
+    background-image:url(../images/default/editor/tb-sprite.gif);
 }
 
 .x-html-editor-tip .x-tip-bd .x-tip-bd-inner {
